Make sure white space is collapsed so text wraps and is always visible in bc table cell

--- a/client/src/document/ingredients/browser-compatibility-table/atoms/_bc-table.scss
+++ b/client/src/document/ingredients/browser-compatibility-table/atoms/_bc-table.scss
@@ -57,6 +57,7 @@
 
     code {
       text-decoration: none;
+      white-space: normal;
     }
   }
 
